                        not possibly have knowledge of its power state. Hence,
                        the host is marked as unknown. 
      - Added working blacklist/whitelist with the ability to use regular
        expressions
      - Added --alertonly here
      - Added --multiline here
    - listcluster
      - Removed senseless perf data
      - More detailed check than before
      - Added working blacklist/whitelist with the ability to use regular
        expressions
      - Added --alertonly here
      - Added --multiline here
    - status
      - Rewritten and reformatted
    - tools
      - Rewritten and reformatted
      - Improved more detailed output.
        expressions
      - Added --alertonly here
      - Added --multiline here

- 24 Jan 2014 M.Fuerstenau version 0.9.4
  - Merged pull request from Sven Nierlein
    - Modified hel to work with Thruk
    - Added Makefile. This is optional. Calling it generates a single file
      from all the modules. Maybe it is a little bit slower than the modules.
      The readon for modules was speed and better maintenance.
  - host_runtime_info()
    - Added quotes in perfdata for temp.
  - Enhanced README. Explained the differences un host_storage_info() between
    the original one and this one
  - host_net_info()
    - Minor bugfix in output. Corrected typo.

- 29 Jan 2014 M.Fuerstenau version 0.9.5
  - host_runtime_info()
    - Minor bug. Corrected quotes in perfdata for temp.
  - vm_net_info()
    - Quotes in perfdata
    - Removed VM name from output
  - vm_mem_info()
    - Quotes in perfdata
  - vm_disk_io_info()
    - Quotes in perfdata
  - vm_cpu_info()
    - Quotes in perfdata
  - host_net_info()
    - Quotes in perfdata
  - host_mem_info()
    - Quotes in perfdata
  - host_disk_io_info()
    - Quotes in perfdata
  - host_cpu_info()
    - Quotes in perfdata
  - dc_runtime_info()
    - Quotes in perfdata
  - datastore_volumes_info()
    - Quotes in perfdata